<resources>
    <string name="app_name">Plants &amp; Friends</string>
    <string name="app_title">Plants&amp;Friends App</string>
    <string name="sign_up">New User? Create an Account</string>
    <string name="already_an_user_login">Already an user? Go back</string>
    <string name="not_registered">Not registered?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="log_out">Log out</string>
    <string name="welcome">Welcome</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="plant_hint">Enter your plant here</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="plants_list">Plant List</string>
    <string name="add_plant">Add Plant</string>
    <string name="search_plants">Search Plant</string>
    <string name="default_web_client_id">879052393297-ml0akv96vnmt66ajjjclavnljeosk7gi.apps.googleusercontent.com</string>
    <string name="plant_title">Plant Title</string>
    <string name="save_plants_to_firestore">Save plants to Firestore</string>
    <string name="go_back">Go Back</string>
    <string name="create_account">Create Account</string>
    <string name="register_here">Register Here</string>
    <string name="plant_name">Name</string>
    <string name="plant_species">Species</string>
    <string name="chosen_name">Input Name</string>
    <string name="plant_details">Plant Details</string>
    <string name="new_plant">New Plant</string>
    <string name="chosen_species">Input Species</string>
    <string name="add_plant_icon">Add Plant Icon</string>
    <string name="todo">TODO</string>
    <string name="temperature">Temperature</string>
    <string name="current_humidity"> - - </string>
    <string name="current_temperature"> - - </string>
    <string name="min_temperature">%1$.1f</string>
    <string name="max_temperature">%1$.1f</string>
    <string name="ideal_temperature">Ideal Temperature</string>
    <string name="ideal_humidity">Ideal Humidity</string>
    <string name="min_humidity">%1$.1f</string>
    <string name="max_humidity">%1$.1f</string>
    <string name="add_notes_about_the_plant">This is where you can add notes about your plant!</string>
    <string name="description">Special Notes</string>
    <string name="alerts">Room\'s Alerts</string>
    <string name="negative_logo">negative_logo</string>
    <string name="alerts_text">This is where you can set the ideal intervals for temperature and humidity for the room where your plants are!\nIf the sensor in the room detects any values outside the ideal range, you will receive a notification.</string>
    <string name="notes_text">Notes:\n- Please update the plants to Firestore so this feature works best.\n- This functionality is not supported for versions of Android 12 or higher.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet_connection_feature_unavailable">Feature unavailable:\n\t\t- Please connect to the internet</string>
    <string name="load_plants_from_firestore">Load From Firestore</string>
    <string name="add_new_plant">New Plant</string>
    <string name="android_12_or_higher_not_supported">Feature unavailable:\n\t\t- Android 12+ not supported</string>
    <string name="combo">Feature unavailable:\n\t\t- Android 12+ not supported and no internet connection</string>
</resources>