<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/green"
        android:titleTextColor="#FFFFFF"
        android:layout_marginBottom="10dp">

        <ImageView
            android:id="@+id/toolbar_icon"
            android:layout_width="35sp"
            android:layout_height="35sp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/white_logo"
            app:tint="#FFFFFF"
            android:contentDescription="@string/negative_logo" />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/toolbar_icon"
            android:paddingStart="10dp"
            android:paddingEnd="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>


    <!-- Horizontal LinearLayout for Image and Text Views -->
    <LinearLayout
        android:id="@+id/horizontal_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:paddingStart="30sp"
        android:paddingEnd="30sp"
        android:paddingBottom="30sp"
        android:orientation="horizontal">

        <!-- Plant Image -->
        <ImageView
            android:paddingTop="10sp"
            android:id="@+id/add_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/default_plant_image"
            android:contentDescription="@string/todo"
            android:layout_gravity="center_vertical" />

        <!-- Vertical LinearLayout for Text Views -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="16sp">

            <!-- Plant Name Section -->
            <TextView
                android:id="@+id/name_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plant_name"
                android:fontFamily="@font/poppins"
                android:textColor="@color/gray"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/chosen_name"
                android:minHeight="48dp"
                android:padding="0sp"
                android:paddingBottom="2dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <!-- Plant Species Section -->
            <TextView
                android:id="@+id/species_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plant_species"
                android:fontFamily="@font/poppins"
                android:textColor="@color/gray"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/species"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/chosen_species"
                android:minHeight="48dp"
                android:padding="0sp"
                android:paddingBottom="2dp"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/temperature_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/horizontal_layout"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:orientation="vertical">

        <!-- Title for the range slider -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/ideal_temperature"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <!-- Material Components Range Slider -->
        <com.google.android.material.slider.RangeSlider
            android:id="@+id/temperatureRangeSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/ideal_temperature"
            android:valueFrom="-40.0"
            android:valueTo="80.0"
            app:thumbColor="@color/green"
            app:trackColorActive="@color/green"
            app:trackColorInactive="@color/light_gray"
            app:values="@array/default_temperature_range"

            android:background="@drawable/round" />

        <!-- Display Temperature Limits -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/minTemperature"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/min_temperature"
                android:textSize="12sp"
                android:textColor="@color/blue_gray"
                android:fontFamily="@font/poppins" />

            <TextView
                android:id="@+id/maxTemperature"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/max_temperature"
                android:textSize="12sp"
                android:fontFamily="@font/poppins"
                android:textAlignment="textEnd"
                android:textColor="@color/blue_gray" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temperature_layout"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:paddingTop="10sp"
        android:id="@+id/humidity_layout"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/ideal_humidity"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <!-- Material Components Range Slider -->
        <com.google.android.material.slider.RangeSlider
            android:id="@+id/humidityRangeSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/ideal_humidity"
            android:valueFrom="0"
            android:valueTo="100"
            app:thumbColor="@color/green"
            app:trackColorActive="@color/green"
            app:trackColorInactive="@color/light_gray"
            app:values="@array/default_humidity_range"
            android:background="@drawable/round" />

        <!-- Display Temperature Limits -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/minHumidity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/min_humidity"
                android:textSize="12sp"
                android:textColor="@color/blue_gray"
                android:fontFamily="@font/poppins" />

            <TextView
                android:id="@+id/maxHumidity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/max_humidity"
                android:textSize="12sp"
                android:fontFamily="@font/poppins"
                android:textAlignment="textEnd"
                android:textColor="@color/blue_gray" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/plants_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/humidity_layout"
        android:layout_above="@+id/save_layout"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:paddingTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/plantsEditText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/add_notes_about_the_plant"
                android:inputType="textMultiLine"
                android:gravity="top|start"
                android:minLines="5"
                android:padding="15dp"
                android:textSize="16sp"
                android:background="@drawable/round"
                android:autofillHints="" />
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/save_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:clickable="false"
        android:paddingBottom="30dp">

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:clickable="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_button"
            android:elevation="10dp"
            android:paddingHorizontal="50dp"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:text="@string/save"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

</RelativeLayout>
