<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/notesline"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:elevation="10dp"
        android:outlineSpotShadowColor="@color/gray"
        android:padding="24dp"
        android:background="@drawable/edit_text">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/loginText"
            android:textSize="36sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/yellow" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/login_email"
            android:background="@drawable/edit_text"
            android:layout_marginTop="20dp"
            android:padding="8dp"
            android:hint="@string/email"
            android:drawableStart="@drawable/baseline_person_24"
            android:textColor="@color/black"
            android:drawablePadding="8dp"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/login_password"
            android:background="@drawable/edit_text"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:padding="8dp"
            android:hint="@string/password"
            android:drawableStart="@drawable/baseline_lock_24"
            android:textColor="@color/black"
            android:drawablePadding="8dp"
            android:importantForAutofill="no" />

        <Button
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/login_button"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_button"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:elevation="10dp" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/googleBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:elevation="10dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/google_sign_in"
            android:visibility="visible"
            app:colorScheme="dark" />

        <TextView
            android:id="@+id/signUpRedirectText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="8dp"
            android:layout_gravity="center"
            android:text="@string/not_registered"
            android:textAlignment="center"
            android:textColor="@color/yellow"
            android:textSize="14sp" />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/round_button"
            android:backgroundTint="@color/gray"
            android:elevation="10dp"
            android:padding="10dp"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>